# opengl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: nightly.yml  rolling.yml
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test.cpp
